test/fixtures/public/fail/syntactical/NestedLoop.jmm
class NestedLoop {
	public static void main(String[] args) {
	while (i < ) {
			while (j < ) {
				
		}
		}
	}
}